--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -60,11 +60,12 @@ We created a CLI tool called https://github.com/instructlab/instructlab[ilab] th
 
 . Apple M1/M2/M3 Mac
 . Linux systems
+. Windows 11 under a WSL environment
 
-We anticipate support for more operating systems in the future. The system requirements to use the command line tool are as follows:
+During this lab, we will be using the ilab command line tools on a Red Hat Enterprise Linux system. We anticipate support for more operating systems in the future. The system requirements to use the command line tool are as follows:
 
 . C++ compiler
-. Python 3.9+
+. Python 3.10+
 . Approximately 60GB disk space (entire process)
 .. Disk space requirements are dependent on several factors. Keep in mind that we will be generating data to feed to the model while also having the model locally on our system. For example, the model we are working with during this workshop is roughly 5gb in size.
 
@@ -95,7 +96,7 @@ source venv/bin/activate
 
 // [source,sh,role=execute,subs=attributes+]
 // ----
-// pip3 install git+https://github.com/instructlab/instructlab.git@v0.17.1
+// pip3 install git+https://github.com/instructlab/instructlab.git@v0.18.4
 
 // ----
 // +
@@ -123,28 +124,37 @@ Usage: ilab [OPTIONS] COMMAND [ARGS]...
   CLI for interacting with InstructLab.
 
 
-  If this is your first time running ilab, it's best to start with `ilab init`
+  If this is your first time running ilab, it's best to start with `ilab config init`
   to create the environment.
 
 
 Options:
-  --config PATH  Path to a configuration file.  [default: config.yaml]
+  --config PATH  Path to a configuration file.  [default: /home/instruct/.config/instructlab/config.yaml]
+  -v, --verbose  Enable debug logging (repeat for even more verbosity)
   --version      Show the version and exit.
   --help         Show this message and exit.
 
-
 Commands:
-  chat      Run a chat using the modified model
-  check     (Deprecated) Check that taxonomy is valid
-  convert   Converts model to GGUF
-  diff      Lists taxonomy files that have changed since <taxonomy-base>...
-  download  Download the model(s) to train
-  generate  Generates synthetic data to enhance your example data
-  init      Initializes environment for InstructLab
-  list      (Deprecated) Lists taxonomy files that have changed since <taxonomy-base>.
-  serve     Start a local server
-  test      Runs basic test to ensure model correctness
-  train     Takes synthetic data generated locally with `ilab generate`...
+  config    Command Group for Interacting...
+  data      Command Group for Interacting...
+  model     Command Group for Interacting...
+  system    Command group for all...
+  taxonomy  Command Group for Interacting...
+
+Aliases:
+  chat      model chat
+  convert   model convert
+  diff      taxonomy diff
+  download  model download
+  evaluate  model evaluate
+  generate  data generate
+  init      config init
+  list      model list
+  serve     model serve
+  sysinfo   system info
+  test      model test
+  train     model train
+
 ----
 
 
@@ -159,45 +169,51 @@ Now that we know that the command-line interface `ilab` is working correctly, th
 ----
 ilab config init
 ----
-.You should see the following output:
+You should see the following output (press Enter for defaults):
 [subs=quotes]
 ----
-Found config.yaml in the current directory, do you still want to continue? [y/N]: **y**
 Welcome to InstructLab CLI. This guide will help you to setup your environment.
 Please provide the following values to initiate the environment [press Enter for defaults]:
 ----
 
 NOTE: While traditionally you'll be prompted to download the taxonomy and configure options, here you can just it kbd:[ENTER] for the default settings.
 
-// When prompted to accept the `config.yaml`, hit kbd:[ENTER]
-
 // [subs=quotes]
 // ----
-// Path to taxonomy repo [taxonomy]:
+// Path to taxonomy repo [/home/instruct/.local/share/instructlab/taxonomy]: 
 // ----
 
 // NOTE: When prompted to provide the path to the taxonomy repo, hit kbd:[ENTER] 
 
 // [subs=quotes]
 // ----
-// `taxonomy` seems to not exist or is empty. Should I clone git@github.com:instruct-lab/taxonomy.git for you? [y/N]: y
+// `/home/instruct/.local/share/instructlab/taxonomy` seems to not exist or is empty. Should I clone https://github.com/instructlab/taxonomy.git for you? [Y/n]: Y
+Cloning https://github.com/instructlab/taxonomy.git...
 // ----
 
-// NOTE: If asked if the CLI should clone the taxonomy repo, input 'y' as shown in the above output.
+// NOTE: If asked if the CLI should clone the taxonomy repo, input 'Y' as shown in the above output.
 
 // [source,sh]
 // ----
-// Path to your model [models/merlinite-7b-lab-Q4_K_M.gguf]:
+// Path to your model [/home/instruct/.cache/instructlab/models/merlinite-7b-lab-Q4_K_M.gguf]: 
+Generating `/home/instruct/.config/instructlab/config.yaml`...
 // ----
 
 // NOTE: When asked to enter a directory for the model file, use the default and hit <ENTER>
 
 [subs=quotes]
 ----
-Cloning git@github.com:instruct-lab/taxonomy.git...
-Generating `config.yaml` in the current directory...
-Initialization completed successfully, you're ready to start using `ilab`. Enjoy!
+Please choose a train profile to use:
+[0] No profile (CPU-only)
+[1] A100_H100_x2.yaml
+[2] A100_H100_x4.yaml
+[3] A100_H100_x8.yaml
+[4] L40_x4.yaml
+[5] L40_x8.yaml
+[6] L4_x8.yaml
+Enter the number of your choice [hit enter for the default CPU-only profile] [0]: 
 ----
+// NOTE: When asked to enter a train profile, enter 6 as shown in the above output.
 
 * Several things happen during the initialization phase: A default taxonomy is located on the local file system, and a configuration file (config.yaml) is created in the current directory.
 * The config.yaml file contains defaults we will use during this workshop. After this workshop, when you begin playing around with InstructLab, it is important to understand the contents of the configuration file so that you can tune the parameters to your liking
